[gd_scene load_steps=14 format=2]

[ext_resource path="res://recursos/botones/BotonNormal.tres" type="StyleBox" id=1]
[ext_resource path="res://recursos/botones/BotonSalirNormal.tres" type="StyleBox" id=2]
[ext_resource path="res://juego/font/ROBOTECH GP.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://juego/SFX/VictoriaSFX.wav" type="AudioStream" id=4]
[ext_resource path="res://juego/menus/MenuVictoria.gd" type="Script" id=5]
[ext_resource path="res://juego/SFX/Select_ok.wav" type="AudioStream" id=6]
[ext_resource path="res://juego/SFX/BotonHover.wav" type="AudioStream" id=7]
[ext_resource path="res://juego/menus/fondo_menu.jpg" type="Texture" id=8]

[sub_resource type="DynamicFont" id=1]
size = 52
extra_spacing_char = 3
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.160784, 0.784314, 0.741176, 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.92549, 0.443137, 0.32549, 1 )

[sub_resource type="DynamicFont" id=2]
size = 69
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=5]
size = 96
outline_size = 2
outline_color = Color( 0.0941176, 0.968627, 0.972549, 1 )
extra_spacing_char = 10
font_data = ExtResource( 3 )

[node name="MenuVictoria" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 4.0
margin_bottom = 4.0
script = ExtResource( 5 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -7.0
margin_top = 23.0
margin_right = -7.0
margin_bottom = 23.0
color = Color( 0, 0, 0, 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 479.5, 332 )
scale = Vector2( 0.749219, 0.855556 )
texture = ExtResource( 8 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -173.0
margin_top = 12.0
margin_right = 173.0
margin_bottom = 163.0

[node name="BotonMenuPrincipal" type="Button" parent="VBoxContainer"]
margin_right = 346.0
margin_bottom = 73.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 1 )
custom_styles/hover = SubResource( 3 )
custom_styles/normal = ExtResource( 1 )
text = "Menu principal"

[node name="BotonSalir" type="Button" parent="VBoxContainer"]
margin_top = 77.0
margin_right = 346.0
margin_bottom = 151.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 1 )
custom_styles/hover = SubResource( 4 )
custom_styles/normal = ExtResource( 2 )
text = "salir"

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -251.0
margin_top = 221.0
margin_right = 49.0
margin_bottom = 299.0
rect_scale = Vector2( 1.37746, 0.959559 )
custom_fonts/font = SubResource( 2 )
text = "SCORE: "
align = 1

[node name="Label2" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -315.0
margin_top = 87.0
margin_right = 144.0
margin_bottom = 195.0
rect_scale = Vector2( 1.37746, 0.959559 )
custom_colors/font_color = Color( 0.133333, 0.337255, 0.737255, 1 )
custom_fonts/font = SubResource( 5 )
text = "Â¡victoria!"
align = 1

[node name="VictoriaSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
bus = "SFX"

[node name="BotonHover" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -20.0
bus = "SFX"

[node name="BotonPress" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -20.0
bus = "SFX"

[connection signal="mouse_entered" from="VBoxContainer/BotonMenuPrincipal" to="." method="_on_BotonMenuPrincipal_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/BotonMenuPrincipal" to="." method="_on_BotonMenuPrincipal_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/BotonSalir" to="." method="_on_BotonSalir_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/BotonSalir" to="." method="_on_BotonSalir_pressed"]
